--- a/conf/server.yaml
+++ b/conf/server.yaml
@@ -1,10 +1,30 @@
 # サーバのポート
 port: 2222
 
-# データの保存の仕方（memory or mongodb）
+# データ保持の手段（memory or mongodb）
 storeType: memory
 
-# mongodbの接続文字列
+# 【注意】
+# この設定値は必ず書き換え、他人に漏らさないこと。
+# 考えるのが面倒な方は下記のサイトで生成したものを設定すると良いです。
+# https://hogehoge.tk/guid/
+# https://uuid.doratool.com/
+#
+# 【説明】
+# データストアの中身は「コレクション名」が分かっていればクライアントからでも直接アクセスすることができます。
+# Quoridornでは、クライアントから直接アクセスされたくないコレクション（便宜上「シークレットコレクション」と呼びます）
+# を扱うために、この設定値をコレクション名の末尾に使用します。
+#
+# 【運用上の補足】
+# ・既に稼働実績のあるQuoridornサーバのこの設定値を変更する場合
+#   ・データ保持の手段がmemoryの場合
+#     → サーバ停止＝データストアの全消滅なので、特に気にしなくて問題ありません。
+#   ・データ保持の手段がMongoDBの場合
+#     → 部屋データはプログラム制御にて自動的に生成・削除されますが、シークレットコレクション(15行目参照)は削除の仕組みがありません。
+#       書き換え前にこの設定値を名前の末尾に持つコレクション（これがシークレットコレクションです）を運用によって削除してください。
+secretCollectionSuffix: c8c4b7f3-ce60-41ba-a0d3-e90876d09c1a
+
+# MongoDBの接続文字列
 mongodbConnectionStrings: mongodb://localhost:27017/quoridorn
 
 # 設置できる部屋の数
