Ver.1.0.0a10 :sparkles: タッチ中に異常終了したクライアントのタッチ状態を解放する仕組みを追加、リリースタッチのリクエストを最小限に。

--- a/message/message.yaml
+++ b/message/message.yaml
@@ -1,6 +1,4 @@
-title: Quoridorn 開発中テストサーバー
+title: ローカルサーバ
 
 descriptions:
-  - 初めての方：まずは部屋を作ってみましょう。
-  - 楽しいセッションとなりますように！
-  - 公式サイトは[こちら](http://quoridorn.com/#/)
+  - これはHillTopのローカルPCに立ってるサーバ！！
