Ver.1.0.0a11 :book: message.yamlの修正

--- a/message/message.yaml
+++ b/message/message.yaml
@@ -1,4 +1,6 @@
-title: ローカルサーバ
+title: Quoridorn 開発中テストサーバー
 
 descriptions:
-  - これはHillTopのローカルPCに立ってるサーバ！！
+  - 初めての方：まずは部屋を作ってみましょう。
+  - 楽しいセッションとなりますように！
+  - 公式サイトは[こちら](http://quoridorn.com/#/)
