--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
   },
   "homepage": "https://github.com/HillTopTRPG/quoridorn-server#readme",
   "dependencies": {
+    "@types/mongodb": "^3.3.14",
+    "@types/node-fetch": "^2.5.4",
+    "@types/socket.io-client": "^1.4.32",
     "@types/uuid": "^3.4.5",
+    "@types/yaml": "^1.2.0",
     "argon2": "^0.25.0",
     "bcrypt": "^3.0.6",
     "co": "^4.6.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "moment": "^2.24.0",
     "mongodb": "^3.3.2",
     "nekostore": "^0.6.0",
