--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "bcrypt": "^3.0.6",
     "co": "^4.6.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "log4js": "^6.1.0",
     "moment": "^2.24.0",
     "mongodb": "^3.3.2",
     "nekostore": "^0.6.0",
