--- a/src/interoperability.yaml
+++ b/src/interoperability.yaml
@@ -1,3 +1,7 @@
+- server: 1.0.0a37
+  client: 2.0.0a64
+- server: 1.0.0a36
+  client: 2.0.0a63
 - server: 1.0.0a35
   client: 2.0.0a60
 - server: 1.0.0a34
