--- a/config/storage.yaml
+++ b/config/storage.yaml
@@ -5,6 +5,7 @@ bucket: quoridorn
 accessUrl: ''
 
 # アプリケーションサーバからs3系ストレージにアクセスするために使う、s3プロトコルの「END_POINT」の値
+# 末尾に/を入れてください。
 endPoint: localhost
 
 # アプリケーションサーバからs3系ストレージにアクセスするために使う、s3プロトコルの「PORT」の値
