--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/HillTopTRPG/quoridorn-server#readme",
   "dependencies": {
+    "@types/express": "^4.17.7",
     "@types/minio": "^7.0.5",
     "@types/mongodb": "^3.3.14",
     "@types/node-fetch": "^2.5.4",
@@ -32,13 +33,20 @@
     "@types/yaml": "^1.2.0",
     "argon2": "^0.25.0",
     "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "co": "^4.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "g": "^2.0.1",
+    "grpc": "^1.24.3",
     "log4js": "^6.1.0",
     "minio": "^7.0.15",
     "moment": "^2.24.0",
     "mongodb": "^3.3.2",
     "nekostore": "^0.6.0",
+    "node-gyp": "^7.1.0",
+    "s": "^1.0.0",
     "socket.io": "^2.3.0",
     "typescript": "^3.6.4",
     "uuid": "^3.3.3",
