--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quoridorn-server",
-  "version": "1.0.0",
+  "version": "1.0.0a50",
   "description": "Application server of the Quoridorn.",
   "main": "index.js",
   "scripts": {
