Ver.1.0.0a52 :sparkles: 部屋作成パスワードを実装

--- a/config/server.yaml.example
+++ b/config/server.yaml.example
@@ -42,6 +42,10 @@ storeType: mongodb
 #       書き換え前にこの設定値を名前の末尾に持つコレクション（これがシークレットコレクションです）を運用によって削除してください。
 secretCollectionSuffix: c8c4b7f3-ce60-41ba-a0d3-e90876d09c1a
 
+# 部屋作成用パスワード
+# 空文字でない値を設定すると、部屋作成時にクライアント側で部屋作成パスワードが必要になります。
+roomCreatePassword: ""
+
 # 設置できる部屋の数
 roomNum: 100
 
