--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "g": "^2.0.1",
     "grpc": "^1.24.3",
     "log4js": "^6.1.0",
+    "match-all": "^1.2.6",
     "minio": "^7.0.15",
     "moment": "^2.24.0",
     "mongodb": "^3.3.2",
