--- a/config/storage.yaml.example
+++ b/config/storage.yaml.example
@@ -1,20 +1,27 @@
 # s3系ストレージ上のバケット
+# バケットはあらかじめ作成しておいてください
 bucket: quoridorn
 
 # ブラウザからストレージを参照するためのURLのベース
 # 末尾に/を入れてください。
+# 例)
+# accessUrl: 'http://localhost:9000/quoridorn/'
 accessUrl: ''
 
 # アプリケーションサーバからs3系ストレージにアクセスするために使う、s3プロトコルの「END_POINT」の値
+# minio起動時に表示される「Endpoint」の値（複数表示されていたらそのうちの1つ）
+# ポート番号は不要
 endPoint: localhost
 
 # アプリケーションサーバからs3系ストレージにアクセスするために使う、s3プロトコルの「PORT」の値
 port: 9000
 
 # アプリケーションサーバからs3系ストレージにアクセスするために使う、s3プロトコルの「ACCESS_KEY」の値
+# minio起動時に表示される「AccessKey」の値
 accessKey: ''
 
 # アプリケーションサーバからs3系ストレージにアクセスするために使う、s3プロトコルの「SECRET_KEY」の値
+# minio起動時に表示される「SecretKey」の値
 secretKey: ''
 
 # アプリケーションサーバからs3系ストレージにアクセスするために使う、s3プロトコルの「SECURE」の値
