--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quoridorn-server",
-  "version": "1.0.0a59",
+  "version": "1.0.0b1",
   "description": "Application server of the Quoridorn.",
   "main": "index.js",
   "scripts": {
