--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "build": "tsc -t ES5 && cpx -C src/interoperability.yaml dist",
     "node-server": "node dist/server.js",
     "server": "npx ts-node src/server.ts",
-    "test-server": "npx ts-node src/nekostore_test/test_server.ts",
-    "test-client": "npx ts-node src/nekostore_test/test_client.ts",
-    "node-server-test": "node dist/nekostore_test/test_server.js"
+    "build-run": "tsc -t ES5 && cpx -C src/interoperability.yaml dist; node dist/server.js",
+    "minio-start": "minio server --address localhost:9000 /minio"
   },
   "repository": {
     "type": "git",
@@ -23,34 +22,40 @@
   },
   "homepage": "https://github.com/HillTopTRPG/quoridorn-server#readme",
   "dependencies": {
-    "@types/express": "^4.17.7",
-    "@types/minio": "^7.0.5",
-    "@types/mongodb": "^3.3.14",
-    "@types/node-fetch": "^2.5.4",
-    "@types/socket.io-client": "^1.4.32",
-    "@types/uuid": "^3.4.5",
-    "@types/yaml": "^1.2.0",
-    "argon2": "^0.25.0",
-    "bcrypt": "^5.0.0",
+    "@types/archiver": "^5.1.0",
+    "@types/express": "^4.17.12",
+    "@types/fs-extra": "^9.0.11",
+    "@types/minio": "^7.0.7",
+    "@types/mongodb": "^3.6.18",
+    "@types/multer": "^1.4.5",
+    "@types/node-fetch": "^2.5.10",
+    "@types/socket.io-client": "^1.4.36",
+    "@types/uuid": "^8.3.0",
+    "@types/yaml": "^1.9.6",
+    "archiver": "^5.3.0",
+    "argon2": "^0.28.2",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
-    "co": "^4.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
     "g": "^2.0.1",
     "grpc": "^1.24.3",
-    "log4js": "^6.1.0",
+    "log4js": "^6.3.0",
     "match-all": "^1.2.6",
-    "minio": "^7.0.15",
-    "moment": "^2.24.0",
-    "mongodb": "^3.3.2",
+    "minio": "^7.0.18",
+    "moment": "^2.29.1",
+    "mongodb": "^3.6.9",
+    "multer": "^1.4.2",
     "nekostore": "^0.6.0",
-    "node-gyp": "^7.1.0",
+    "node-gyp": "^8.1.0",
+    "node-zip": "^1.1.1",
     "s": "^1.0.0",
-    "socket.io": "^2.3.0",
-    "typescript": "^3.6.4",
-    "uuid": "^3.3.3",
-    "yaml": "^1.7.1"
+    "socket.io": "^4.1.2",
+    "typescript": "~4.3.3",
+    "uuid": "^8.3.2",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
     "cpx": "^1.5.0"
